--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.3",
     "vanilla-infinite-marquee": "^1.0.13"
   },
